# pythoneer-agent

./: .gitattributes  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  run.py
config/: py2_to_py3.yaml  py2_to_py3_w_tests.yaml  pytorch_to_tensorflow.yaml  pytorch_to_tensorflow_w_script.yaml
docker/: DockerfilePy2  DockerfilePy3  DockerfilePyTorch  DockerfilePython2  DockerfilePython3  DockerfileTensorFlow
pythoneer/: __init__.py  agent.py  codebase.py  llm.py  messages.py  paths.py  trajectory.py
pythoneer/prompts/: py2_to_py3.yaml  pytorch_to_tensorflow.yaml
pythoneer/tools/: __init__.py  base.py  factory.py  observations.py  tools.py  utils.py
