[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pythoneer"
authors = [{name = "Tom Wetherell"}]
dynamic = ["version", "description"]

dependencies = [
  "ruff",
  "pre-commit",
  "python-dotenv",
  "loguru",
  "anthropic==0.28",
]

[project.urls]
Home = "https://github.com/tomwetherell/pythoneer-agent"

[tool.ruff]
line-length = 100